[build-system]
requires = [ "setuptools", "setuptools_scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "ts_genericcamera"
description = "CSC for Generic Camera."
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
urls = { documentation = "https://jira.lsstcorp.org/secure/Dashboard.jspa", repository = "https://github.com/lsst-ts/ts_genericcamera" }
dynamic = [ "version" ]

[tools.setuptools]
package-data = {"" = "*.header"}

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_genericcamera = "lsst.ts.genericcamera.genericcameracsc:run_genericcamera"
run_liveviewui = "lsst.ts.genericcamera.liveview.liveviewui:run_liveviewui"

[tool.setuptools_scm]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
  "documenteer[pipelines]",
  "tornado",
  "gphoto2",
  "rawpy",
  "vimba",
]
